--- a/Hannibal.xcodeproj/xcshareddata/xcschemes/Hannibal.xcscheme
+++ b/Hannibal.xcodeproj/xcshareddata/xcschemes/Hannibal.xcscheme
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForAnalyzing = "YES"
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "YES">
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
-               BuildableIdentifier = 'primary'
-               BlueprintIdentifier = '33A4A5741DB481A74DAE827B'
-               BlueprintName = 'Hannibal'
-               ReferencedContainer = 'container:Hannibal.xcodeproj'
-               BuildableName = 'Hannibal.app'>
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "33A4A5741DB481A74DAE827B"
+               BuildableName = "Hannibal.app"
+               BlueprintName = "Hannibal"
+               ReferencedContainer = "container:Hannibal.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
-      <AdditionalOptions>
-      </AdditionalOptions>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
-               BuildableIdentifier = 'primary'
-               BlueprintIdentifier = '4C4FB41DDFAF3EC50A8CB01E'
-               BlueprintName = 'UnitTests'
-               ReferencedContainer = 'container:Hannibal.xcodeproj'
-               BuildableName = 'UnitTests.bundle'>
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4C4FB41DDFAF3EC50A8CB01E"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:Hannibal.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
-            BuildableIdentifier = 'primary'
-            BlueprintIdentifier = '33A4A5741DB481A74DAE827B'
-            BlueprintName = 'Hannibal'
-            ReferencedContainer = 'container:Hannibal.xcodeproj'
-            BuildableName = 'Hannibal.app'>
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "33A4A5741DB481A74DAE827B"
+            BuildableName = "Hannibal.app"
+            BlueprintName = "Hannibal"
+            ReferencedContainer = "container:Hannibal.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -59,34 +60,34 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      buildConfiguration = "Debug"
       allowLocationSimulation = "YES">
-      <AdditionalOptions>
-      </AdditionalOptions>
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier = 'primary'
-            BlueprintIdentifier = '33A4A5741DB481A74DAE827B'
-            BlueprintName = 'Hannibal'
-            ReferencedContainer = 'container:Hannibal.xcodeproj'
-            BuildableName = 'Hannibal.app'>
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "33A4A5741DB481A74DAE827B"
+            BuildableName = "Hannibal.app"
+            BlueprintName = "Hannibal"
+            ReferencedContainer = "container:Hannibal.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      buildConfiguration = "Release"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <BuildableProductRunnable>
+      debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier = 'primary'
-            BlueprintIdentifier = '33A4A5741DB481A74DAE827B'
-            BlueprintName = 'Hannibal'
-            ReferencedContainer = 'container:Hannibal.xcodeproj'
-            BuildableName = 'Hannibal.app'>
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "33A4A5741DB481A74DAE827B"
+            BuildableName = "Hannibal.app"
+            BlueprintName = "Hannibal"
+            ReferencedContainer = "container:Hannibal.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
