--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: objective-c
 
+rvm: 2.2.4
+
 before_install:
-  - gem install cocoapods
+  - gem install cocoapods -v '0.39.0'
 
 branches:
   only:
